Added tags Changed CSS entirely so it doesen't look crap.

--- a/partials/menu.ejs
+++ b/partials/menu.ejs
@@ -6,9 +6,21 @@
       <label class="label" for="article_name">Search an article</label>
       <input type="text" name="article_name" id="search" placeholder="cuardaigh..."/> 
       <p id="alert"></p>
-      <p ></p>
-      <a href="https://glas.low-fat-lard.repl.co/search/verb">Verbs</a>
-      <a href="https://glas.low-fat-lard.repl.co/search/noun">Nouns</a>
+      <a class="link" href="https://glas.low-fat-lard.repl.co/">Home</a><br>
+      <a class="link" href="https://glas.low-fat-lard.repl.co/about">About</a><br>
+      <a class="link" href="https://glas.low-fat-lard.repl.co/achievements">Achievements</a>
+      <p>Key Words</p>
+      <div class="keyword">
+        <a href="https://glas.low-fat-lard.repl.co/search/verb">Verbs</a><br>
+        <a href="https://glas.low-fat-lard.repl.co/search/noun">Nouns</a><br>
+        <a href="https://glas.low-fat-lard.repl.co/search/noun">Grammar</a>
+      </div>
+      <p>Next Achievement</p>
+      <div class="achieve">
+        <label for="file"><strong>Big brother is watching you</strong></label>
+        <progress id="achieve" value="32" max="100"> 32% </progress>
+        <p>32% complete (5 more to go)</p>
+      </div>
     </div>
     </article>
   </div>
