--- a/partials/menu.ejs
+++ b/partials/menu.ejs
@@ -1,7 +1,16 @@
 <section class="container">
-  <div class="bar">
-      <div class="achievement"></div>
-      <div class="description"></div>
+    <div class="preloader">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif?20151024034921" alt="spinner">
+    </div>
+    <div class='game_achievement' id="achievement">
+    <div>
+      <h3>Achievement unlocked</h3>
+      <div class='game_achievement__name' id="name">
+      </div>
+      <div class='game_achievement__description' id="description">
+        
+      </div>
+    </div>
   </div>
   <div class="left-half">
     <article>
@@ -21,9 +30,8 @@
       </div>
       <p>Next Achievement</p>
       <div class="achieve">
-        <label><strong id="label">In the Aeroplane over the sea</strong></label>
-        <div id="achieve"> 32% </div>
-        <p id="percent">32% complete (5 more to go)</p>
+        <label><strong id="label"></strong></label>
+        <div id="achieve"></div>
       </div>
     </div>
     </article>
