--- a/view/achieve.ejs
+++ b/view/achieve.ejs
@@ -3,13 +3,16 @@
 
 <head>
   <%- include('../partials/head'); %>
-  <title>Glas - Quiz</title>
+  <title>Glas - Achievements</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
      <%- include('../partials/menu'); %>
         <article id="main">
+            <div id="achievList">
+            </div>
+            <button class="danger" onclick="clearData()">Clear data</button>
         </article>
       <%- include('../partials/footer'); %>
       <script src="../js/main.js"></script>        
