A lot of backend changes that dont even matter

--- a/partials/menu.ejs
+++ b/partials/menu.ejs
@@ -1,43 +1,8 @@
-<section class="container">
-    <button id="navButton" class="nav"onclick="navigate()">☰</button>
-    <div class="preloader">
-      <div class="loading-spinner"></div>
+    <div class="nav">
+        <a href="/" class="navLink">
+        <div class="navItem">Home</div>
+        </a>
+        <a href="/about" class="navLink">
+        <div class="navItem2">About</div>
+        </a>
     </div>
-    <div class='game_achievement' id="achievement">
-    <div>
-      <h3>Achievement unlocked</h3>
-      <div class='game_achievement__name' id="name">
-      </div>
-      <div class='game_achievement__description' id="description">
-        
-      </div>
-    </div>
-  </div>
-  <div class="left-half" id="left">
-    <article>
-    <div class="header">
-      <h1 class="logo" id="logo">Glas</h1>
-      <label class="label" for="article_name">Search an article</label>
-      <input type="text" name="article_name" id="search" placeholder="cuardaigh..."/> 
-      <p id="alert"></p>
-      <a class="link" href="https://glas.low-fat-lard.repl.co/">Home</a><br>
-      <a class="link" href="https://glas.low-fat-lard.repl.co/about">About</a><br>
-      <a class="link" href="https://glas.low-fat-lard.repl.co/achievements">Achievements</a>
-
-      <p>Key Words</p>
-      <div class="keyword">
-        <a href="https://glas.low-fat-lard.repl.co/search/verb">Verbs</a><br>
-        <a href="https://glas.low-fat-lard.repl.co/search/noun">Nouns</a><br>
-        <a href="https://glas.low-fat-lard.repl.co/search/grammar">Grammar</a>
-      </div>
-      <p>Next Achievement</p>
-     <a class="next" href="https://glas.low-fat-lard.repl.co/achievements">
-      <div class="achieve">
-        <label><strong id="label"></strong></label>
-        <div id="achieve"></div>
-      </div>
-     </a>
-    </div>
-    </article>
-  </div>
-  <div class="right-half">
