Better search / bug fixes

--- a/view/about.ejs
+++ b/view/about.ejs
@@ -9,6 +9,7 @@
 <body>
     <div class="content">
       <%- include('../partials/menu'); %>
+              <div class="grids">
       <main class="main">
         <h1>☘️Glas</h1>
             Welcome to glas! Glas is an interactive irish learning website. <br>If you click on an article, the
@@ -16,8 +17,10 @@
             should be there. If you have anything you want to change about the website, just create an issue or a fork
             to
           the GitHub repo. I will make sure to see it. Made by <a href='https://github.com/Low-Fat-Lard'>Low-Fat-Lard</a>
+          
         
       </main>
+              </div>
     </div>
       <script src="js/main.js"></script>
       <script src="js/achieve.js"></script>
