--- a/view/quiz.ejs
+++ b/view/quiz.ejs
@@ -22,7 +22,7 @@
           <br>
           <button id="replay" onclick="replay()">Replay</button>
           <button id="next" onclick="next()">Next</button>
-        </duv>
+        </div>
     </div>
     <%- include('../partials/footer'); %>
     <script src="../js/main.js"></script>
